--- a/index.html
+++ b/index.html
@@ -15,8 +15,29 @@
   </head>
   <body>
     <div class="container">
-      <h1>Vanilla Weather App</h1>
-      <a href="" class="btn btn-primary">Click here</a>
+      <h1>New York, NY USA</h1>
+      <div class="row">
+        <div class="col-6">
+          <img
+            src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
+            alt="light-clouds"
+          />
+          27ºC|ºF
+        </div>
+        <div class="col-6">
+          <ul>
+            <li>Precipitation: 0%</li>
+            <li>Humidity: 37%</li>
+            <li>Wind: 13kmh</li>
+          </ul>
+        </div>
+      </div>
+      <small>
+        <a href="https://github.com/Boilin-T/vanilla-weather-app"
+          >Open-source code</a
+        >
+        by Linda C.
+      </small>
     </div>
     <script src="src/app.js"></script>
   </body>
