--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <body>
     <div class="container">
       <h1>New York, NY USA</h1>
+      <h2>Thursday 17:34</h2>
+      <h2>Mostly Cloudy</h2>
       <div class="row">
         <div class="col-6">
           <img
