--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
       crossorigin="anonymous"
     />
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/style.css" />
     <title>Vanilla Weather App</title>
   </head>
@@ -19,23 +20,23 @@
       <div class="weather-app">
         <h1>New York, NY USA</h1>
         <h2>Thursday 17:34</h2>
-        <h2>Mostly Cloudy</h2>
+        <h2 id="description"></h2>
         <div class="row">
           <div class="col-6 temperature">
             <img
               src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
               alt="light-clouds"
             />
-            <scan class="temp">27</scan>
+            <scan id="temp"></scan>
             <scan class="degrees">ºC|
             <a href="#">ºF</a>
             </scan>
           </div>
           <div class="col-6">
             <ul class="attributes">
-              <li>Precipitation: 0%</li>
-              <li>Humidity: 37%</li>
-              <li>Wind: 13kmh</li>
+            
+              <li>Humidity: <scan id="humidity"></scan>%</li>
+              <li>Wind: <scan id="wind"></scan> kmh</li>
             </ul>
           </div>
         </div>
