--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <div class="container">
       <div class="weather-app-wrapper"></div>
       <div class="weather-app">
-        <h1>New York, NY USA</h1>
-        <h2>Thursday 17:34</h2>
+        <h1 id=city></h1>
+        <h2 id="date"></h2>
         <h2 id="description"></h2>
         <div class="row">
           <div class="col-6 temperature">
