--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="weather-app-wrapper"></div>
       <div class="weather-app">
         <h1 id=city></h1>
-        <h2 id="date"></h2>
+        <h2>Last updated: <scan id="date"></scan> </h2>
         <h2 id="description"></h2>
         <div class="row">
           <div class="col-6 temperature">
