--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         <div class="row">
           <div class="col-6 temperature">
             <img
-              src="https://ssl.gstatic.com/onebox/weather/64/partly_cloudy.png"
+              src=""
+              id="icon"
               alt="light-clouds"
             />
             <scan id="temp"></scan>
