--- a/index.html
+++ b/index.html
@@ -16,32 +16,47 @@
   </head>
   <body>
     <div class="container">
-      <div class="weather-app-wrapper"></div>
-      <div class="weather-app">
-        <h1 id=city></h1>
-        <h2>Last updated: <scan id="date"></scan> </h2>
-        <h2 id="description"></h2>
-        <div class="row">
-          <div class="col-6 temperature">
-            <img
-              src=""
-              id="icon"
-              alt="light-clouds"
-            />
-            <scan id="temp"></scan>
-            <scan class="degrees">ºC|
-            <a href="#">ºF</a>
-            </scan>
-          </div>
-          <div class="col-6">
-            <ul class="attributes">
-            
-              <li>Humidity: <scan id="humidity"></scan>%</li>
-              <li>Wind: <scan id="wind"></scan> kmh</li>
-            </ul>
+      <div class="weather-app-wrapper">
+        <div class="weather-app">
+          <form id="search-form">
+            <div class="row">
+              <div class="col-9">
+                <input
+                  type="text"
+                  placeholder="Enter a city"
+                  class="form-control"
+                  id="city-input"
+                />
+              </div>
+              <div class="col-3">
+                <input
+                  type="submit"
+                  value="Search"
+                  class="btn btn-primary w-100"
+                />
+              </div>
+            </div>
+          </form>
+          <h1 id="city"></h1>
+          <h2>Last updated: <scan id="date"></scan></h2>
+          <h2 id="description"></h2>
+          <div class="row">
+            <div class="col-6 temperature">
+              <img src="" id="icon" alt="light-clouds" />
+              <scan id="temp"></scan>
+              <scan class="degrees"
+                >ºC|
+                <a href="#">ºF</a>
+              </scan>
+            </div>
+            <div class="col-6">
+              <ul class="attributes">
+                <li>Humidity: <scan id="humidity"></scan>%</li>
+                <li>Wind: <scan id="wind"></scan> kmh</li>
+              </ul>
+            </div>
           </div>
         </div>
-      </div>
         <small>
           <a href="https://github.com/Boilin-T/vanilla-weather-app"
             >Open-source code</a
