Added temperature toggle C/F

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
             <div class="col-6 temperature">
               <img src="" id="icon" alt="light-clouds" />
               <scan id="temp"></scan>
-              <scan class="degrees"
-                >ºC|
-                <a href="#">ºF</a>
+              <scan class="degrees">
+                <a href="#" id="celsius-temp" class="active">ºC</a> |
+                <a href="#" id="fahrenheit-temp">ºF</a>
               </scan>
             </div>
             <div class="col-6">
