--- a/index.html
+++ b/index.html
@@ -61,7 +61,13 @@
           <a href="https://github.com/Boilin-T/vanilla-weather-app"
             >Open-source code</a
           >
-          by Linda C.
+          by Linda C. and hosted on
+          <a
+            href="https://app.netlify.com/teams/boilin-t/overview"
+            target="_blank"
+            rel="noopener noreferrer"
+            >Netlify</a
+          >
         </small>
       </div>
     </div>
