--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
               </ul>
             </div>
           </div>
+          <div class="weather-forecast" id="forecast">
+            
+          </div>
         </div>
         <small>
           <a href="https://github.com/Boilin-T/vanilla-weather-app"
